Automagically building YurtSki from moba

--- a/about.html
+++ b/about.html
@@ -262,100 +262,144 @@
         </div>
 
       <div id="content" class="page-main-content">
-          <!-- <h2>Image slider to get people excited here</h2> -->
-
-<!-- For over a decade, YurtSki has provided exclusive  -->
-
-<div class='align-center'>
-	<img width="300" class='u-max-full-width' src="img/alpine_yurt.png">
+          <div class='align-center'>
+	<img class='u-max-full-width' src="img/ski-tips-with-logo.jpg">
 </div>
 
 
 <h2 id="faq">Frequently Asked Questions</h2>
 
-<h4 class="faq-section">Where are the yurts located?</h4>
-<p>The yurts sit nestled high in the Southern Swan Mountains of Montana, in between the Mission Mountains and the Bob Marshall Wilderness. They are situated deep in the Montana backcountry, approximately eleven miles via snowmachine or eight miles skinning from the trailhead. The trailhead is approximately an hour from Missoula and 90 minutes from Helena.
+<h4 class="faq-section toggle-child-on-click">Where are the yurts located?</h4>
+<p class='faq-expand mb24'>The yurts sit nestled high in the Southern Swan Mountains of Montana, in between the Mission Mountains and the Bob Marshall Wilderness. They are situated deep in the Montana backcountry, approximately eleven miles via snowmachine or eight miles skinning from the trailhead. The trailhead is approximately an hour from Missoula and 90 minutes from Helena.<br>
+<br>
+The trailhead is located on Cottonwood Lakes road at the winter plowing boundary just past Rich's Montana Guest Ranch. The trailhead has limited parking so please consider carpooling.<br>
+<br>
+<a href="maps.html">See our maps page for more information</a>.</p>
 
-The trailhead is located on Cottonwood Lakes road at the winter plowing boundary just past Rich's Montana Guest Ranch. The trailhead has limited parking so please consider carpooling.</p>
 
+<h4 class="faq-section toggle-child-on-click">What is the difference between the Lupine Yurt and the Alpine Yurt?</h4>
+<p class='faq-expand'>About two hundred vertical feet and ¾ mile separate the two yurts. Both yurts are similarly equipped. The Lupine maybe better suited for skiing off the Lookout/ Supernatural Area of the horseshoe where as the Alpine is slightly better situated for skiing the back bowls. The Alpine Yurt is slightly larger and can more easily accommodate bigger groups.</p>
 
-<h4 class="faq-section">What is the difference between the Lupine Yurt and the Alpine Yurt?</h4>
-<p>About two hundred vertical feet and ¾ mile separate the two yurts. Both yurts are similarly equipped. The Lupine maybe better suited for skiing off the Lookout/ Supernatural Area of the horseshoe where as the Alpine is slightly better situated for skiing the back bowls. The Alpine Yurt is slightly larger and can more easily accommodate bigger groups.</p>
+<h4 class="faq-section toggle-child-on-click">What is the elevation of the yurts?</h4>
+<p class='faq-expand'>The Alpine Yurt sits at approximately 6800’ and the Lupine yurt sits at approximately 6600’</p>
 
-<h4 class="faq-section">What is the elevation of the yurts?</h4>
-<p>The Alpine Yurt sits at approximately 6800’ and the Lupine yurt sits at approximately 6600’</p>
+<h4 class="faq-section toggle-child-on-click">How much snow do the yurts receive each season?</h4>
+<p class='faq-expand'>The Seeley-Swan area of Montana is known for its colder weather and heavier snow falls. This translates to incredible cold smoke powder skiing. On April 1st of 2009, we had almost 14 feet of snow pack, not fall at the Alpine Yurt. The average seems to be around 10 feet. Storms dumping multiple feet of snow are not uncommon.</p>
 
-<h4 class="faq-section">How much snow do the yurts receive each season?</h4>
-<p>The Seeley-Swan area of Montana is known for its colder weather and heavier snow falls. This translates to incredible cold smoke powder skiing. On April 1st of 2009, we had almost 14 feet of snow pack, not fall at the Alpine Yurt. The average seems to be around 10 feet. Storms dumping multiple feet of snow are not uncommon.</p>
+<h4 class="faq-section toggle-child-on-click">What is a gear haul?</h4>
+<p class='faq-expand'>Take the weight off your back and off your mind. YurtSki will haul your group’s gear to the door of the yurt. Gear haul is priced at $200 + $20 per person.<br>
 
-<h4 class="faq-section">What is a gear haul?</h4>
-<p>Take the weight off your back and off your mind. YurtSki will haul your group’s gear to the door of the yurt. Gear haul is priced at $200 + $20 per person.</p>
+The trip into Yurt Ski is 11 miles on the road, or 8 miles if you cut the switchback and climb with skins.  A gear haul in makes the most of your trip by getting you and your stuff into the yurts so you can ski and enjoy!  We will also make sure to point out the freshwater spring, start you off with a full supply of water, and make sure the firewood is stocked and ready.</p>
 
-<p>The trip into Yurt Ski is 11 miles on the road, or 8 miles if you cut the switchback and climb with skins.  A gear haul in makes the most of your trip by getting you and your stuff into the yurts so you can ski and enjoy!  We will also make sure to point out the freshwater spring, start you off with a full supply of water, and make sure the firewood is stocked and ready.</p>
+<h4 class="faq-section toggle-child-on-click">Why are there daily minimums?</h4>
+<p class='faq-expand'>The minimum allows us to ensure exclusivity to your group while staying at the yurts. We have different minimums for each yurt to accommodate different group sizes. Minimums are in dollars, not people. For example, groups of 2 or 3 are more than welcome to rent out the Lupine Yurt on a weekend night, they will just be paying the price of a 4 person group. Additionally, due to the terrain at the yurts, we require all parties to be at least 2 people for avalanche safety.</p>
 
-<h4 class="faq-section">Why are there daily minimums?</h4>
-<p>The minimum allows us to ensure exclusivity to your group while staying at the yurts. We have different minimums for each yurt to accommodate different group sizes. Minimums are in dollars, not people. For example, groups of 2 or 3 are more than welcome to rent out the Lupine Yurt on a weekend night, they will just be paying the price of a 4 person group. Additionally, due to the terrain at the yurts, we require all parties to be at least 2 people for avalanche safety.</p>
+<h4 class="faq-section toggle-child-on-click">How many people can stay in the yurts?</h4>
+<p class='faq-expand'>Both yurts have 2 full-size bunk beds allowing for individual sleeping for 4 people or 8 if sharing the full-size mattresses. Additionally, the slightly larger Alpine Yurt has 2 futon couches that can be converted into beds.</p>
 
-<h4 class="faq-section">How many people can stay in the yurts?</h4>
-<p>Both yurts have 2 full-size bunk beds allowing for individual sleeping for 4 people or 8 if sharing the full-size mattresses. Additionally, the slightly larger Alpine Yurt has 2 futon couches that can be converted into beds.</p>
+<h4 class="faq-section toggle-child-on-click">What type of terrain is in the area?</h4>
+<p class='faq-expand'>The immediate Yurtski terrain consists of a horseshoe shaped ridge that is separated into three main bowls by short finger ramps. The skiing in these areas ranges from steep cliff sections and chutes to mellow burnt tree runs which funnel back towards the yurts. There is also ample opportunity to tour the ridge and drop off the backside towards the Bob Marshall & Scapegoat Wilderness. Longer tours may decide to drop off the backside to a lake for lunch and laps.</p>
 
-<h4 class="faq-section">What type of terrain is in the area?</h4>
-<p>The immediate Yurtski terrain consists of a horseshoe shaped ridge that is separated into three main bowls by short finger ramps. The skiing in these areas ranges from steep cliff sections and chutes to mellow burnt tree runs which funnel back towards the yurts. There is also ample opportunity to tour the ridge and drop off the backside towards the Bob Marshall & Scapegoat Wilderness. Longer tours may decide to drop off the backside to a lake for lunch and laps.</p>
+<h4 class="faq-section toggle-child-on-click">How do I book a trip?</h4>
+<p>View the <a href="book.html">availability calendar here</a>! Check both the Alpine and Lupine availability and grab the weekend you want! Always feel free to call or email us and we can help you with your booking! Upon completion of your reservation, We'll email you all the details you need to know for your upcoming trip.</p>
 
-<h4 class="faq-section">How do I book a trip?</h4>
-<p>There are Book Now buttons on every page of our website.  These buttons direct you to our booking service where you can do everything online! Upon completion of your reservation, We'll email you all the details you need to know for your upcoming trip.</p>
+<h4 class="faq-section toggle-child-on-click">Do we need to have avalanche equipment even if we’re not skiing?</h4>
+<p class='faq-expand'>Yes. A beacon, shovel and probe are mandatory for anyone visiting the yurts. The Swan Mountains are avalanche country and we must be prepared at all times. Avalanches can and do occur in the area.</p>
 
-<h4 class="faq-section">Do we need to have avalanche equipment even if we’re not skiing?</h4>
-<p>Yes. A beacon, shovel and probe are mandatory for anyone visiting the yurts. The Swan Mountains are avalanche country and we must be prepared at all times. Avalanches can and do occur in the area.</p>
+<h4 class="faq-section toggle-child-on-click">Are cross-country skis or snowshoes okay?</h4>
+<p class='faq-expand'>Cross-country skis are not recommended. There is A LOT of snow. Snowshoes seem to work for some snowboarders, but we do recommend split-boarding over snowshoe approaches for our snowboarding friends.</p>
 
-<h4 class="faq-section">Are cross-country skis or snowshoes okay?</h4>
-<p>Cross-country skis are not recommended. There is A LOT of snow. Snowshoes seem to work for some snowboarders, but we do recommend split-boarding over snowshoe approaches for our snowboarding friends.</p>
+<h4 class="faq-section toggle-child-on-click">What do you do for water?</h4>
+<p class='faq-expand'>We utilize a mountain spring for drinking water. Drinking water can be retrieved on the way into the yurts. With gear hauls, we will gather at least 5 gallons of water for your group. If not using gear haul, water jugs are recommended, as is a hatchet to break the ice that forms over the spring. We drink from the spring untreated; however this decision is ultimately yours. Boiling or treating water with iodine are good options. Otherwise, culinary/ washing water is gained from melting snow.</p>
 
-<h4 class="faq-section">What do you do for water?</h4>
-<p>We utilize a mountain spring for drinking water. Drinking water can be retrieved on the way into the yurts. With gear hauls, we will gather at least 5 gallons of water for your group. If not using gear haul, water jugs are recommended, as is a hatchet to break the ice that forms over the spring. We drink from the spring untreated; however this decision is ultimately yours. Boiling or treating water with iodine are good options. Otherwise, culinary/ washing water is gained from melting snow.</p>
+<h4 class="faq-section toggle-child-on-click">Are the yurts heated?</h4>
+<p class='faq-expand'>The yurts are heated by wood burning stoves and all firewood is provided. Inside the yurts there are wood bunks full of dry, split wood. Outside the yurts there are woodpiles where rounds can be found for splitting.</p>
 
-<h4 class="faq-section">Are the yurts heated?</h4>
-<p>The yurts are heated by wood burning stoves and all firewood is provided. Inside the yurts there are wood bunks full of dry, split wood. Outside the yurts there are woodpiles where rounds can be found for splitting.</p>
+<h4 class="faq-section toggle-child-on-click">What do I need to bring?</h4>
+<p class='faq-expand'><a class="link" href="packing">Click here to see our suggested packing list.</a></p>
 
-<h4 class="faq-section">What do I need to bring?</h4>
-<p><a class="link" href="packing">Click here to see our suggested packing list.</a></p>
+<h4 class="faq-section toggle-child-on-click">Where can I rent backcountry skiing equipment in Missoula or Bozeman?</h4>
+<div>
+	<p style="padding-left:5px;"><strong>Missoula: </strong> <a target="_blank" href="https://mtskitech.com/">MT Ski Tech</a>: Skis, boots, beacon, shovel, and probe @ $229 for a four day trip when you mention YurtSki.<br>
 
-<h4 class="faq-section">Where can I rent backcountry skiing equipment in Missoula?</h4>
-<p>Visit <a target="_blank" href="https://mtskitech.com/">MT Ski Tech in Missoula</a> <em>($229 for skis, boots, beacon, shovel, and probe</em> when you tell them you're taking a class with YurtSki!) Or head to <a target="_blank" href="https://www.lastbestskiandpaddle.com/winterrenalinfo">Last Best Ski & Paddle</a> for Black Crow AT skis or Weston Splitboards with Spark bindings (beacons, shovels, probes available, too).</p>
+	<a target="_blank" href="https://www.lastbestskiandpaddle.com/winterrenalinfo">Last Best Ski & Paddle</a> has Black Crow AT skis or Weston Splitboards with Spark bindings <em>(beacons, shovels, probes also available)</em></p>
 
-<h4 class="faq-section">What is supplied at the yurts?</h4>
-<p>Yurtski provides a wood burning stove, firewood, ax, maul ax/splitting tool, cook stove, propane, lantern, white gas, pots, pans, plates, bowls, cups, cooking and eating utensils, kettle, snow melt pots, at least 5 gallons of spring water for drinking (only if a gear haul is elected), sleeping mattresses/pads/cot/futon. The Alpine Yurt features 2 futon couches and also houses a Life flight extraction kit (helicopter specific backboard, splints, neck braces, emergency blanket, six man carry, basic first aid). But above all, super terrain!</p>
-
-<a class="link" href="inventory"> Click here for a complete inventory of what is at the yurts</a>
-
-<h4 class="faq-section">Is there an outhouse?</h4>
-<p>There is a three sided outhouse located directly behind each yurt in order to answer nature’s call in relative comfort.</p>
-
-<h4 class="faq-section">Where is the closest place to stay before my trip?</h4>
-<p>While there are plenty of lodging options in Helena or Missoula, <a class="link" target="_blank" href="http://richranch.com">Rich's Montana Guest Ranch</a> offers cabin rooms for rent. They are located a quarter-mile from the trailhead and their winter rates are:
-
-<div class="align-center mt12 px36 mb24">
-	<table class="table">
-		<tr>
-			<th>Small Cabin Room</th>
-			<td>1 King Bed</td>
-			<td>$125 per night (plus tax)</td>
-		</tr>
-		</tr>
-			<th>Large Cabin Room</th>
-			<td>2 Queen Beds</td>
-			<td>$150 per night (plus tax)</td>
-		</tr>
-	</table>
+    <p style="padding-left:5px;"><strong>Bozeman: </strong> <a target="_blank" href="http://uphillpursuits.com/">Uphill Pursuits</a> can put together a backcountry ski or snowboard set up for your trip.</p>
 </div>
 
 
-<h4 class="faq-section">Cancellation Policy?</h4>
-<p>Montana Backcountry Yurts requires a 50% nonrefundable deposit at the time of booking. You can choose to use the "Pay Now" in your invoice to pay the remaining 50% any time before your trip. We will charge any outstanding balance to your credit card 30 days prior to your trip. If booking less than 30 days in advance, we require you to pay in full.</p>
+<h4 class="faq-section toggle-child-on-click">What is supplied at the yurts?</h4>
+<p>Yurtski provides a wood burning stove, firewood, ax, maul ax/splitting tool, cook stove, propane, lantern, white gas, pots, pans, plates, bowls, cups, cooking and eating utensils, kettle, snow melt pots, at least 5 gallons of spring water for drinking (only if a gear haul is elected), sleeping mattresses/pads/cot/futon. The Alpine Yurt features 2 futon couches and also houses a Life flight extraction kit (helicopter specific backboard, splints, neck braces, emergency blanket, six man carry, basic first aid). But above all, super terrain!<br>
+<br>
+<a class="link" href="inventory"> Click here for a complete inventory of what is at the yurts</a></p>
 
-<p>You can cancel your trip up to 30 days prior to your start date online at yurtski.checkfront.com, by email: info@montanabackcountryyurts.com, or by phone: (406) 848-4824. Your deposit will not be refunded, but we will not charge you the remaining balance.</p>
+<h4 class="faq-section toggle-child-on-click">Is there an outhouse?</h4>
+<p>There is a three sided outhouse located directly behind each yurt in order to answer nature’s call in relative comfort.</p>
 
-<p>Trips canceled less than 1 month prior to the start date are still required to be paid in full and are nonrefundable.</p>
+<h4 class="faq-section toggle-child-on-click">Where is the closest place to stay before my trip?</h4>
+<div>
+	<p>While there are plenty of lodging options in Helena or Missoula, <a class="link" target="_blank" href="http://richranch.com">Rich's Montana Guest Ranch</a> offers cabin rooms for rent. They are located a quarter-mile from the trailhead and their winter rates are:</p>
+
+	<div class="align-center mt12 px36 mb24">
+		<table class="table">
+			<tr>
+				<th>Small Cabin Room</th>
+				<td>1 King Bed</td>
+				<td>$125 per night (plus tax)</td>
+			</tr>
+			</tr>
+				<th>Large Cabin Room</th>
+				<td>2 Queen Beds</td>
+				<td>$150 per night (plus tax)</td>
+			</tr>
+		</table>
+	</div>
+</div>
+
+<h4 class="faq-section toggle-child-on-click">What about the burn?</h4>
+<p>The summer 2017 forest fires opened up terrain never really considered before! There are now incredible open tree runs right out the front door of the yurt down into the gulley. If you liked skiing the classic "burnt trees" before, you're in for a treat!</p>
+
+
+
+<h4 class="faq-section toggle-child-on-click">What is the Cancellation Policy?</h4>
+<p>Montana Backcountry Yurts requires a 50% nonrefundable deposit at the time of booking. You can choose to use the "Pay Now" in your invoice to pay the remaining 50% any time before your trip. We will charge any outstanding balance to your credit card 30 days prior to your trip. If booking less than 30 days in advance, we require you to pay in full.<br>
+<br>
+You can cancel your trip up to 30 days prior to your start date online at yurtski.checkfront.com, by email: info@montanabackcountryyurts.com, or by phone: (406) 848-4824. Your deposit will not be refunded, but we will not charge you the remaining balance.<br>
+<br>
+Trips canceled less than 1 month prior to the start date are still required to be paid in full and are nonrefundable.</p>
+
+<hr>
+
+<div class='align-center'>
+	<img class='u-max-full-width' src="img/skier-trees-powder.jpg">
+	<p class='caption'>Powder in the North Bowl Trees</p>
+</div>
+
+
+<hr>
+
+<script>
+	
+	//Runtime: hide sections if Javascript is enabled
+	var sections = document.getElementsByClassName('toggle-child-on-click')
+	
+	for(var i=0; i<sections.length; i++){
+		//Hide the children first
+		sections[i].nextElementSibling.style.display = 'none';
+
+		//Add the event listeners:
+		sections[i].addEventListener('click',function(e){
+			console.log(e)
+			console.log(this.nextElementSibling.style.display)
+			if( this.nextElementSibling.style.display != 'block') {
+				this.nextElementSibling.style.display = 'block';
+			}else{
+				this.nextElementSibling.style.display = 'none';
+			}
+		});
+	}
+
+</script>
       </div>
     </div>
     <div class="two columns right-sidebarright">
