--- a/classes.html
+++ b/classes.html
@@ -282,7 +282,12 @@
  -->
 <div class='highlight mb12'>
   <h6 class='yurtski-blue italic'>Need to rent gear for a class?</h6>
-  <p>Visit <a target="_blank" href="https://mtskitech.com/">MT Ski Tech in Missoula</a> <em>($229 for skis, boots, beacon, shovel, and probe</em> when you tell them you're taking a class with YurtSki!) Or head to <a target="_blank" href="https://www.lastbestskiandpaddle.com/winterrenalinfo">Last Best Ski & Paddle</a> for Black Crow AT skis or Weston Splitboards with Spark bindings (beacons, shovels, probes available, too).</p>
+  <p style="padding-left:5px;"><strong>Missoula: </strong> <a target="_blank" href="https://mtskitech.com/">MT Ski Tech</a>: Skis, boots, beacon, shovel, and probe @ $229 for a four day trip when you mention YurtSki.<br>
+
+	<a target="_blank" href="https://www.lastbestskiandpaddle.com/winterrenalinfo">Last Best Ski & Paddle</a> has Black Crow AT skis or Weston Splitboards with Spark bindings <em>(beacons, shovels, probes also available)</em></p>
+
+    <p style="padding-left:5px;"><strong>Bozeman: </strong> <a target="_blank" href="http://uphillpursuits.com/">Uphill Pursuits</a> can put together a backcountry ski or snowboard set up for your trip.</p>
+  <!-- <p>Visit <a target="_blank" href="https://mtskitech.com/">MT Ski Tech in Missoula</a> <em>($229 for skis, boots, beacon, shovel, and probe</em> when you tell them you're taking a class with YurtSki!) Or head to <a target="_blank" href="https://www.lastbestskiandpaddle.com/winterrenalinfo">Last Best Ski & Paddle</a> for Black Crow AT skis or Weston Splitboards with Spark bindings (beacons, shovels, probes available, too).</p> -->
 </div>
 
 
