--- a/index.html
+++ b/index.html
@@ -279,12 +279,19 @@
 	<p>The Alpine Yurt is bigger! A <strong>new</strong> 24' yurt with 2 futon couches provides sleeping for up to 10 people and has <em>way</em> more room for classes.</p>
 	<h6 class='yurtski-blue'>New Stoves & Insulation</h6>
 	<p>Both yurts feature new stoves and wall and roof insulation to make your trip the warmest yet!</p>
+
+	<p class="align-center mt12"><a class='link button u-full-width bg-yurtski-blue' href="book">View Booking Calendar</a>
+
+	<div class='align-center'>
+		<h6 class='align-center color-orange button' onclick="hideParent(this,1)">Close</h6>
+	</div>
+
+	
 </div>
 
-<p class="align-center"><a class='link button u-full-width bg-yurtski-blue' href="book">View Booking Calendar</a>
-
-<div class="align-center">
-	<iframe class="embedded-video" src="https://www.youtube.com/embed/cQxT1Rym_48" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+<div class='align-center'>
+	<iframe class='embedded-video' src="https://player.vimeo.com/video/384835812" width="640" height="360" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe><br>
+	<p class='caption'><em>A glimpse of life at YurtSki from <a href="https://vimeo.com/reecegbrandon">Reece Brandon</a></em>.</p>
 </div>
 
 
@@ -324,15 +331,19 @@
 
 <p class="align-center"><a class='link button u-full-width bg-yurtski-blue' href="book">View Booking Calendar</a>
 
+<div class="align-center">
+	<iframe class="embedded-video" src="https://www.youtube.com/embed/cQxT1Rym_48" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+	<p class="caption">A glimpse of life at YurtSki (from 2015)</p>
+</div>
+
+<hr>
 <img class='u-max-full-width' src="img/bowl-small.jpeg">
+<hr>
 
-<h5 class="border-b pt24">What about the burn?</h5>
-<p class="pt6">The summer 2017 forest fires opened up terrain never really considered before! There are now incredible open tree runs right out the front door of the yurt down into the gulley. If you liked skiing the classic "burnt trees" before, you're in for a treat!</p>
-
-<div class="mt24 mb24 align-center">
+<!-- <div class="mt24 mb24 align-center">
   <img class='u-max-full-width' src="img/somuchsnow-medium.jpg">
   <p class='caption'>Alpine Yurt, February 2018</p>
-</div>
+</div> -->
       </div>
     </div>
     <div class="two columns right-sidebarright">
