Automagically building YurtSki from moba

--- a/index.html
+++ b/index.html
@@ -132,7 +132,9 @@
       <div id="content" class="page-main-content">
           <!-- <h3 class=""> Come seek refuge at YurtSki this winter!</h3> -->
 
-<div class="banner-box mb12">
+<br>
+
+<!-- <div class="banner-box mb12">
 	<h5 style="font-style:italic; color:orange;">Exciting News for the 2019-2020 Season:</h5>
 
 	<p><span class="h6 yurtski-blue">Gear Rentals!</span> <em>Want to try before you buy? Flying and can't bring your gear?</em></p>
@@ -155,7 +157,23 @@
 	</div>
 
 	
+</div> -->
+
+<div class="row">
+
+  <div class="one-half column center">
+    <img class="u-full-width" src="img/alpine-yurt-with-skis.jpg">
+    <p class="align-center caption">The new 24' Alpine Yurt sleeps up to 10 people on 2 full-size bunk beds and 2 futon couches.</p>
+  </div>
+
+  <div class="one-half column center">
+    <img class="u-full-width" src="img/lupine-yurt-2020.jpg">
+    <p class="align-center caption">20' Lupine Yurt sleeps up to 8 people on 2 full-size bunk beds.</p>
+  </div>
 </div>
+<hr>
+<p>At Yurtski we pride ourselves in providing unforgettable backcountry skiing experiences. Our goal is for people to enjoy the beauty of the Swan Range safely and in comfort while getting some incredible powder turns. See the video below for a glimpse of life at YurtSki, and then get a group together for an experience that will last a life time!</p>
+
 
 <div class='align-center'>
 	<iframe class='embedded-video' src="https://player.vimeo.com/video/384835812" width="640" height="360" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe><br>
@@ -163,7 +181,6 @@
 </div>
 
 
-<p>At Yurtski we pride ourselves in providing unforgettable backcountry skiing experiences. Our goal is for people to enjoy the beauty of the Swan Range safely and in comfort while getting some incredible powder turns. See the video above for a glimpse of life at YurtSki, and then get a group together for an experience that will last a life time!</p>
 
 <p>Throughout the season we also offer a number of <a href="classes.html" class='link'>avalanche classes and backcountry skiing clinics</a> to both introduce people to the wonders of backcountry skiing and teach learn how to make smart, safe decisions while enjoying it. We are proud to be an AIARE course provider, partnering with professional instructors and exceptional backcountry chefs to provide all-inclusive yurt-based avalanche courses.</p>
 
@@ -199,7 +216,7 @@
 <img class='u-max-full-width' src='img/inside_lupine_pano.jpg'>
 <p class='align-center caption'>Inside the Lupine Yurt</p>
 
-<p class="pt6">Drinking water can be retrieved on the way into the yurts from a mountain spring so that you don't have to melt snow. In order to answer nature’s call in comfort there is a three sided outhouse located directly behind each yurt. There is also a Life flight extraction kit (helicopter specific backboard, splints, neck braces, emergency blanket, six man carry, basic first aid, rescue toboggan).</p>
+<p class="pt6">Drinking water can be retrieved on the way into the yurts from a mountain spring so that you don't have to melt snow. In order to answer nature’s call in comfort there is a three sided outhouse located directly behind each yurt. There is also a Life flight extraction kit (helicopter specific backboard, splints, neck braces, emergency blanket, six man carry, basic first aid, rescue toboggan). Read a <a href="inventory.html">complete inventory</a> of what's at the yurt, or check the <a href="faq.html">Frequently asked Questions</a> to learn more about preparing for your trip!</p>
 
 <p class="pt6">The Seeley-Swan area of Montana is known for its colder weather and heavier snow falls. This translates to incredible cold smoke powder skiing. Storms dumping multiple feet of snow are not uncommon. The immediate Yurtski terrain consists of a horseshoe shaped ridge that is separated into three main bowls by short finger ramps. The skiing in these areas ranges from steep cliff sections and chutes to mellow burnt tree runs which funnel back towards the yurts. There is also ample opportunity to tour the ridge and drop off the backside towards the Bob Marshall & Scapegoat Wilderness. Longer tours may decide to drop off the backside to a lake for lunch and laps.</p>
 
