--- a/maps.html
+++ b/maps.html
@@ -138,7 +138,7 @@
     <div class="one-half column align-center mr20">
     	<h4>Getting to the Trailhead</h4>
 		<a class="align-center" target="blank" href="https://goo.gl/maps/YAous3p8pVJ2">
-			<img class='u-max-full-width highlight-border' src="img/trailhead-google.jpg" />
+			<img class='large-screen-only highlight-border' src="img/trailhead-google.jpg" />
 			<h6 class="align-center">Click Here for directions (Google Maps)</h6>
 		</a>
 		<p class="align-left"> The YurtSki parking lot is located a few hundred yards past <a class='link' href="https://www.google.com/maps/place/Rich's+Montana+Guest+Ranch/@47.118153,-113.323631,15z/data=!4m2!3m1!1s0x0:0x9aa50a6ebe7bcf5e?ved=2ahUKEwi3qZeQ-obfAhVojVQKHRZZAEYQ_BIwFnoECAYQCA">Rich's Montana Guest Ranch</a> on <em>Cottonwood Lakes Rd.</em> You will see a large white enclosed snowmobile trailer on the right and a parking spaces to your left. Please  carpool with other members of your party as the shared parking area is small.</p>
@@ -146,7 +146,7 @@
     <div class="one-half column align-center">
 		<h4>Getting to the Yurts</h4>
 		<a class="link" target="_blank" href="assets/YurtSki_TH-to-Yurts.pdf">
-			<img class='u-max-full-width highlight-border' src="img/to-the-yurt-thumbnail.png" />
+			<img class='highlight-border' src="img/to-the-yurt-thumbnail.png" />
 			<h6 class="align-center">Download this map</h6>
 		</a>
 		<p class="align-left">The yurts are located 5 miles up the <em>Morrell Mountain Lookout Rd.</em>, the turnoff for which is 5 miles from the trailhead via <em>Cottonwood Lakes Rd</em>. Be cautious of logging operations during the week within the first 3 miles of <em>Cottonwood Lakes Rd</em>. The above map will get you from the trailhead to the yurts.</p>
