Automagically building YurtSki from moba

--- a/404.html
+++ b/404.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Friends Weekend 2019</title>
+  <title>404</title>
 
   <meta name="description" content="Montana Backcountry Yurts and YurtSki operate yurts in the Montana backcountry on Forest Service lands to provide lodging for backcountry and outdoor recreation">
   <meta name="author" content="Montana Backcountry Yurts">
@@ -132,29 +132,31 @@
     <div class="ten columns">
 
       <div id="content" class="page-main-content">
-          <h2>Join us at YurtSki December 27 - 29 for a Friends Weekend!</h2>
+          <h4 class='mt12'>Can't find that link, watch this movie and then book a trip instead: </h4>
 
-<img class='u-full-width' src="img/friends.png" />
+<div class='align-center'>
+  <iframe class='embedded-video' src="https://player.vimeo.com/video/384835812" width="640" height="360" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe><br>
+  <p class='caption'><em>A glimpse of life at YurtSki from <a href="https://vimeo.com/reecegbrandon">Reece Brandon</a></em>.</p>
+</div>
 
-<h5>Secure your spot by purchasing the item below and filling out the liability waiver, Thanks!</h5>
+<p class="align-center"><a class='link button u-full-width bg-yurtski-blue' href="book">View Booking Calendar</a>
 
-<p>We're stoked to show our friends the improvements we've made this year at YurtSki and get some powder skiing in! Enjoy a weekend with us at half price, we just ask that you spread the word and be sure to tag us on Social Media!</p>
+<hr>
 
-<script type="text/javascript" src="//yurtski.checkfront.com/lib/interface--0.js"></script>
-<!-- CHECKFRONT BOOKING PLUGIN v25-->
-<div id="CHECKFRONT_WIDGET_01"><p id="CHECKFRONT_LOADER" style="background: url('//yurtski.checkfront.com/images/loader.gif') left center no-repeat; padding: 5px 5px 5px 20px">Searching Availability...</p></div>
-<script>
-new DROPLET.Widget ({
-host: 'yurtski.checkfront.com',
-target: 'CHECKFRONT_WIDGET_01',
-category_id: '10',
-options: 'category_select,hidesearch,hidedates',
-date: '20191227',
-end_date: '20191229',
-provider: 'droplet'
-}).render();
-</script>
-<noscript><a href="https://yurtski.checkfront.com/reserve/" style="font-size: 16px">Continue to Secure Booking System &raquo;</a></noscript>
+<div class="row">
+
+  <div class="one-half column center">
+    <img class="u-full-width" src="img/alpine-yurt-with-skis.jpg">
+    <p class="align-center caption">The new 24' Alpine Yurt sleeps up to 10 people on 2 full-size bunk beds and 2 futon couches.</p>
+  </div>
+
+  <div class="one-half column center">
+    <img class="u-full-width" src="img/lupine-yurt-2020.jpg">
+    <p class="align-center caption">20' Lupine Yurt sleeps up to 8 people on 2 full-size bunk beds.</p>
+  </div>
+</div>
+
+<p class="align-center"><a class='link button u-full-width bg-yurtski-blue' href="book">View Booking Calendar</a>
       </div>
     </div>
     <div class="two columns right-sidebarright">
