--- a/book.html
+++ b/book.html
@@ -51,7 +51,7 @@
     
 
     <div class="header-container">
-      <a href="https://montanabackcountryyurts.com">
+      <a href="http://localhost:4000">
         <img class="sub-header-logo" src="/img/mby-logo-transparent.png">
       </a>
       <div class="title-box">
@@ -69,11 +69,11 @@
 
         <div id='level-1' class='level-1'>
           <a class="nav-button" href="/">Home</a> 
-          <a class="nav-button" href="https://montanabackcountryyurts.com/bigbelthut/">Big Belt Hut</a> 
-          <a class="nav-button active" href="https://montanabackcountryyurts.com/yurtski/">YurtSki</a> 
-          <a class="nav-button" href="https://montanabackcountryyurts.com/classes">Classes</a>
-          <a class="nav-button" href="https://montanabackcountryyurts.com/faq">FAQ</a>
-          <a class="nav-button" href="https://montanabackcountryyurts.com/about">About Us</a>
+          <a class="nav-button" href="http://localhost:4000/bigbelthut/">Big Belt Hut</a> 
+          <a class="nav-button active" href="http://localhost:4000/yurtski/">YurtSki</a> 
+          <a class="nav-button" href="http://localhost:4000/classes">Classes</a>
+          <a class="nav-button" href="http://localhost:4000/faq">FAQ</a>
+          <a class="nav-button" href="http://localhost:4000/about">About Us</a>
         </div>
 
         <div id='sub-level-2' class='level-2 yurtski'>
@@ -157,7 +157,7 @@ new DROPLET.Widget ({
 host: 'yurtski.checkfront.com',
 target: 'CHECKFRONT_WIDGET_01',
 item_id: '4',
-// date: '20190108',
+date: '20201204',
 pipe: 'https://montanabackcountryyurts.com/assets/checkfront-helper.html',
 provider: 'droplet'
 }).render();
@@ -179,7 +179,7 @@ new DROPLET.Widget ({
 host: 'yurtski.checkfront.com',
 target: 'CHECKFRONT_WIDGET_02',
 item_id: '2',
-// date: '20190108',
+date: '20201204',
 category_id: '2',
 pipe: 'https://montanabackcountryyurts.com/assets/checkfront-helper.html',
 provider: 'droplet'
