--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     
 
     <div class="header-container">
-      <a href="https://montanabackcountryyurts.com">
+      <a href="http://localhost:4000">
         <img class="sub-header-logo" src="/img/mby-logo-transparent.png">
       </a>
       <div class="title-box">
@@ -69,11 +69,11 @@
 
         <div id='level-1' class='level-1'>
           <a class="nav-button" href="/">Home</a> 
-          <a class="nav-button" href="https://montanabackcountryyurts.com/bigbelthut/">Big Belt Hut</a> 
-          <a class="nav-button active" href="https://montanabackcountryyurts.com/yurtski/">YurtSki</a> 
-          <a class="nav-button" href="https://montanabackcountryyurts.com/classes">Classes</a>
-          <a class="nav-button" href="https://montanabackcountryyurts.com/faq">FAQ</a>
-          <a class="nav-button" href="https://montanabackcountryyurts.com/about">About Us</a>
+          <a class="nav-button" href="http://localhost:4000/bigbelthut/">Big Belt Hut</a> 
+          <a class="nav-button active" href="http://localhost:4000/yurtski/">YurtSki</a> 
+          <a class="nav-button" href="http://localhost:4000/classes">Classes</a>
+          <a class="nav-button" href="http://localhost:4000/faq">FAQ</a>
+          <a class="nav-button" href="http://localhost:4000/about">About Us</a>
         </div>
 
         <div id='sub-level-2' class='level-2 yurtski'>
